upgrade to 4.2